--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
 .App {
   text-align: center;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-family: cursive;
+  color: teal;
+  border: 2px solid teal;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.divBtn {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
+}
+
+.btn-group {
+  display: flex;
+  justify-content: space-around;
+}
+
+.btn1 {
+  margin-top: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  color: mistyrose;
+  background-color: teal;
+  border: none;
+  margin-left: 50px;
+  font-size: 18px;
+  font-family: cursive;
+}
+.btn1:hover {
+  background-color: rgba(16, 236, 163, 0.644); 
+}
+
+.btn {
+  margin-top: 50px;
+  padding: 10px;
+  border-radius: 5px;
+  color: mistyrose;
+  background-color: rgb(3, 146, 146);
+  border: none;
+  margin-left: 50px;
+  font-size: 18px;
+  font-family: cursive;
+}
+.btn:hover {
+  background-color: rgba(16, 236, 163, 0.644);
+}
+.container {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  flex-wrap: wrap;
 }
